komit za popravak stanja i prijadlog narudžbi